--- a/styles/c8_main.css
+++ b/styles/c8_main.css
@@ -9,7 +9,8 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 800px;
+    width: 98%;
+	max-width: 960px;
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
@@ -40,24 +41,27 @@ header h3 {
 }
 header img {
 	float: left;
-	padding: 0 30px;
+	padding: 0 3.7267%;
 }
 .shadow {
 	text-shadow: 2px 2px 2px #800000;
 }
 /* the styles for the navigation menu */
+
 #nav_menu ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 	position: relative;
+
 }
 #nav_menu ul li {
 	float: left;
+	 width: 19.875%;
 }
 #nav_menu ul li a {
     display: block;
-    width: 160px;
+   
     text-align: center;
     padding: 1em 0;
     text-decoration: none;
@@ -65,6 +69,7 @@ header img {
     color: white;
     font-weight: bold;
 }
+
 #nav_menu a.current {
 	color: yellow;
 }
@@ -72,6 +77,7 @@ header img {
     display: none;
     position: absolute;
     top: 100%;
+	width: 100%;
 }
 #nav_menu ul ul li {
 	float: none;
@@ -87,9 +93,9 @@ header img {
 
 /* the styles for the section */
 section {
-	width: 525px;
+	width: 65.22%;
 	float: right;
-	padding: 0 20px 20px 20px;
+	padding: 0 2.484% 20px ;
 }
 section h1 {
 	font-size: 150%;
@@ -133,13 +139,15 @@ article img {
 	float: right;
 	margin: .5em 0 1em 1em;
 	border: 1px solid black;
+	max-width: 40%;
+	min-width: 140px;
 }
 
 /* the styles for the aside */
 aside {
-	width: 215px;
+	width: 26.708%;
 	float: right;
-	padding: 0 0 20px 20px;
+	padding: 0 0 20px 2.484%;
 }
 aside h2 {
 	color: #800000;
@@ -166,3 +174,52 @@ footer p {
 	color: white;
 	padding: 1em 0;
 }
+#mobile_menu{
+	display: none;
+}
+@media only screen and (width <= 600px ){
+	#nav_menu{
+		display:none;
+	}
+	#mobile_menu{
+		display:block;
+	}
+	.slicknav_menu{
+		  background-color: #800000 !important;
+	}
+}
+@media only screen and (width <= 333px) {
+	aside h2 a{
+		font-size: 85%;
+	}
+	section h1{
+		font-size: 125%;
+	}
+	section h2{
+		font-size: 110%;
+	}
+ }
+ @media only screen  and (width <=318px){
+	header img{
+		float:none;
+		align-content: center;
+	}
+	section,aside{
+		float:none;
+		width: 97.516%
+	}
+	aside{
+	padding: 0 2.484% 20px;	
+	}
+	aside div{
+		column-count: 2;
+	
+	}
+	
+
+ }
+ @media only screen and (width<=225px) {
+	*{
+		font-size:90%;
+	}
+ }
